Fixed contact icons, adjusted project spacing

--- a/src/Components/ProjectGallery/ProjectGallery.css
+++ b/src/Components/ProjectGallery/ProjectGallery.css
@@ -1,6 +1,6 @@
 .projectItem {
     /* background-color: grey; */
-    max-width: 1450px;
+    max-width: 1500px;
 
     display: flex;
     flex-direction: row;
