--- a/src/Views/Projects/Projects.css
+++ b/src/Views/Projects/Projects.css
@@ -1,5 +1,5 @@
 .projects {
-    padding: 20px 0px 0px 0px;
+    padding: 20px 0px 30px 0px;
     margin: 0px;
 
     background-color: #131e22;
